# rtail

./: Cargo.toml  README.md
crates/unicode_width/: Cargo.toml
crates/unicode_width/src/: lib.rs  tables.rs
src/: arg_options.rs  global_fn.rs  lib.rs  main.rs  optgroup.rs  result_error.rs
src/tests/: mod.rs  unicode_tests.rs
src/tests/notify/: mod.rs  poll_watcher.rs
src/unicode_width/: mod.rs  tables.rs  unicode_width.rs
