[package]
name = "rtail"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/unicode_width"]
resolver = "2"

[dev-dependencies]
tempfile = "3.13.0"

[dependencies]
notify = "7.0.0"
unicode_width = { path = "crates/unicode_width" }

[features]
cjk = []
default = ["cjk"]

# unicode_width = { path = "crates/unicode_width", features = [
#     "cjk",
# ], optional = true }
